--- a/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/update-suspension-state-action.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/update-suspension-state-action.html
@@ -5,7 +5,7 @@
    tooltip="Suspend Process Definition"
    tooltip-placement="left"
    ng-show="!processDefinition.suspended">
-  <i class="glyphicon glyphicon-pause"></i>
+  <span class="glyphicon glyphicon-pause"></span>
 </a>
 
 <a class="btn btn-default btn-toolbar"
@@ -14,6 +14,6 @@
    tooltip="Activate Process Definition"
    tooltip-placement="left"
    ng-hide="!processDefinition.suspended">
-  <i class="glyphicon glyphicon-play"></i>
+  <span class="glyphicon glyphicon-play"></span>
 </a>
 <!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processDefinition/update-suspension-state-action.html -->
