--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/cancel-process-instance-action.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/cancel-process-instance-action.html
@@ -4,6 +4,6 @@
    ng-click="openDialog()"
    tooltip="Cancel running process instance"
    tooltip-placement="left">
-  <i class="glyphicon glyphicon-remove-circle"></i>
+  <span class="glyphicon glyphicon-remove-circle"></span>
 </a>
 <!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/cancel-process-instance-action.html -->
