--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/update-suspension-state-action.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/update-suspension-state-action.html
@@ -5,7 +5,7 @@
    tooltip="Suspend Process Instance"
    tooltip-placement="left"
    ng-show="!processInstance.suspended">
-  <i class="glyphicon glyphicon-pause"></i>
+  <span class="glyphicon glyphicon-pause"></span>
 </a>
 <a class="btn btn-default btn-toolbar"
    href
@@ -13,6 +13,6 @@
    tooltip="Activate Process Instance"
    tooltip-placement="left"
    ng-hide="!processInstance.suspended">
-  <i class="glyphicon glyphicon-play"></i>
+  <span class="glyphicon glyphicon-play"></span>
 </a>
 <!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/update-suspension-state-action.html -->
