--- a/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/activity-instance-statistics-overlay.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/activity-instance-statistics-overlay.html
@@ -4,7 +4,9 @@
   <span class="badge"
         tooltip="Running Activity Instances"
         tooltip-placement="top"
-        ng-show="activityInstance.instances">{{ activityInstance.instances | abbreviateNumber }}</span>
+        ng-show="activityInstance.instances">
+    {{ activityInstance.instances | abbreviateNumber }}
+  </span>
 
   <span class="badge badge-important"
         tooltip="Open Incidents"
