--- a/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/update-suspension-state-dialog.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/update-suspension-state-dialog.html
@@ -1,10 +1,9 @@
 <!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processDefinition/update-suspension-state-dialog.html -->
 <div class="modal-header">
-  <h3 ng-show="processDefinition.suspended">Activate Process Definition</h3>
-  <h3 ng-hide="processDefinition.suspended">Suspend Process Definition</h3>
+  <h3>{{ (processDefinition.suspended ? 'Activate' : 'Suspend') }} Process Definition</h3>
 </div>
 
-<div class="modal-body">
+<div class="process-definition update-suspension-state modal-body">
   <div notifications-panel></div>
 
   <div ng-hide="status === 'SUCCESS' || status === 'FAIL'">
@@ -32,16 +31,17 @@
             <span tooltip="Including the process instances means that all existing process instances of this process definition will be activated too, if the value is set to true."
                   tooltip-placement="right"
                   ng-show="processDefinition.suspended">
-              <i class="glyphicon glyphicon-question-sign"></i>
+              <span class="glyphicon glyphicon-question-sign"></span>
             </span>
 
             <!-- suspension -->
             <span tooltip="Including the process instances means that all existing process instances of this process definition will be suspended too, if the value is set to true."
                   tooltip-placement="right"
                   ng-hide="processDefinition.suspended">
-              <i class="glyphicon glyphicon-question-sign"></i>
+              <span class="glyphicon glyphicon-question-sign"></span>
             </span>
           </label>
+
           <div class="col-xs-8">
             <label class="checkbox">
               <input id="includeInstancesValueId"
@@ -57,14 +57,15 @@
             <span tooltip="Decide whether the activation of this process definition should be executed immediately or delayed. If the activation should happen delayed then an execution date must be provided on which the activation will be scheduled."
                   tooltip-placement="right"
                   ng-show="processDefinition.suspended">
-              <i class="glyphicon glyphicon-question-sign"></i>
+              <span class="glyphicon glyphicon-question-sign"></span>
             </span>
             <span tooltip="Decide whether the suspension of this process definition should be executed immediately or delayed. If the suspension should happen delayed then an execution date must be provided on which the suspension will be scheduled."
                   tooltip-placement="right"
                   ng-hide="processDefinition.suspended">
-              <i class="glyphicon glyphicon-question-sign"></i>
+              <span class="glyphicon glyphicon-question-sign"></span>
             </span>
           </label>
+
           <div class="col-xs-8">
             <label class="radio">
               <input ng-model="data.executeImmediately"
@@ -82,9 +83,13 @@
               Delayed
             </label>
           </div>
+
           <label class="control-label col-xs-4"
                  for="executionDateValue"
-                 ng-show="!data.executeImmediately">Schedule at</label>
+                 ng-show="!data.executeImmediately">
+            Schedule at
+          </label>
+
           <div class="col-xs-8"
                ng-show="!data.executeImmediately">
             <input date
@@ -98,19 +103,14 @@
               Supported pattern 'yyyy-MM-ddTHH:mm:ss'.
             </p>
           </div>
-        </div>
+
+        </div><!-- /.form-group -->
 
       </fieldset>
     </form>
 
-    <p ng-show="processDefinition.suspended">
-      <!-- activation -->
-      Do you really want to activate this process definition?
-    </p>
-
-    <p ng-hide="processDefinition.suspended">
-      <!-- suspension -->
-      Do you really want to suspend this process definition?
+    <p>
+      Do you really want to {{ (processDefinition.suspended ? 'activate' : 'suspend') }} this process definition?
     </p>
 
   </div>
@@ -120,13 +120,13 @@
       The suspension state of the process definition has been updated to "active" successfully.
     </p>
     <p ng-show="processDefinition.suspended && !data.executeImmediately">
-      The activation of the process definition has been scheduled to {{ data.executionDate }} successfully.
+      The activation of the process definition has been scheduled to {{ data.executionDate | camDate  }} successfully.
     </p>
     <p ng-show="!processDefinition.suspended && data.executeImmediately">
       The suspension state of the process definition has been updated to "suspended" successfully.
     </p>
     <p ng-show="!processDefinition.suspended && !data.executeImmediately">
-      The suspension of the process definition has been scheduled to {{ data.executionDate }} successfully.
+      The suspension of the process definition has been scheduled to {{ data.executionDate | camDate  }} successfully.
     </p>
   </div>
 
@@ -135,35 +135,38 @@
       The suspension state of the process definition could not be updated to "active" successfully.
     </p>
     <p ng-show="processDefinition.suspended && !data.executeImmediately">
-      The activation of the process definition could not be scheduled to {{ data.executionDate }} successfully.
+      The activation of the process definition could not be scheduled to {{ data.executionDate | camDate  }} successfully.
     </p>
     <p ng-show="!processDefinition.suspended && data.executeImmediately">
       The suspension state of the process definition could not be updated to "suspended" successfully.
     </p>
     <p ng-show="!processDefinition.suspended && !data.executeImmediately">
-      The suspension of the process definition could not be scheduled to {{ data.executionDate }} successfully.
+      The suspension of the process definition could not be scheduled to {{ data.executionDate | camDate  }} successfully.
     </p>
   </div>
 
 </div>
+
 <div class="modal-footer">
-  <button class="btn"
+  <button class="btn btn-default"
           ng-click="close(status)"
           ng-disabled="status === 'PERFORM_UDPATE'"
-          ng-hide="status === 'SUCCESS' || status === 'FAIL'">Close</button>
+          ng-hide="status === 'SUCCESS' || status === 'FAIL'">
+    Close
+  </button>
 
   <button type="submit"
           class="btn btn-primary"
           ng-click="updateSuspensionState()"
           ng-hide="status === 'SUCCESS' || status === 'FAIL'"
           ng-disabled="!isValid() || status === 'PERFORM_UDPATE'">
-    <span ng-hide="processDefinition.suspended">Suspend</span>
-    <span ng-show="processDefinition.suspended">Activate</span>
-    <span></span>
+    {{ (processDefinition.suspended ? 'Suspend' : 'Activate') }}
   </button>
 
   <button class="btn btn-primary"
           ng-click="close(status)"
-          ng-show="status === 'SUCCESS' || status === 'FAIL'">OK</button>
+          ng-show="status === 'SUCCESS' || status === 'FAIL'">
+    OK
+  </button>
 </div>
 <!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processDefinition/update-suspension-state-dialog.html -->
