--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/activity-instance-statistics-overlay.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/activity-instance-statistics-overlay.html
@@ -4,7 +4,10 @@
   <span class="badge"
         tooltip="Running Activity Instances"
         tooltip-placement="top"
-        ng-show="activityInstanceStatistics.instances && activityInstanceStatistics.instances.length">{{ activityInstanceStatistics.instances.length | abbreviateNumber }}</span>
+        ng-show="activityInstanceStatistics.instances && activityInstanceStatistics.instances.length">
+    {{ activityInstanceStatistics.instances.length | abbreviateNumber }}
+  </span>
+
   <span class="badge badge-important"
         tooltip="Open Incidents"
         tooltip-placement="top"
