--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/add-variable-action.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/add-variable-action.html
@@ -4,6 +4,6 @@
    ng-click="openDialog()"
    tooltip="Add a new variable to Process Instance"
    tooltip-placement="left">
-  <i class="glyphicon glyphicon-plus"></i>
+  <span class="glyphicon glyphicon-plus"></span>
 </a>
 <!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/add-variable-action.html -->
