--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/identity-links-modal.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/identity-links-modal.html
@@ -3,7 +3,7 @@
   <h3>{{ title }}</h3>
 </div>
 
-<div class="modal-body">
+<div class="identity-links modal-body">
   <div notifications-panel></div>
 
   <form name="editForm"
@@ -11,21 +11,21 @@
     <fieldset ng-show="groups.length">
       <legend>Current group(s)</legend>
 
-      <table class="table table-striped table-condensed">
+      <table class="table cam-table">
         <thead>
           <tr>
-            <th>Group ID</th>
-            <th class="text-right">Action</th>
+            <th class="group-id">Group ID</th>
+            <th class="action text-right">Action</th>
           </tr>
         </thead>
 
         <tbody>
           <tr ng-repeat="(delta, group) in groups">
-            <td>{{ group.groupId }}</td>
-            <td class="text-right">
+            <td class="group-id">{{ group.groupId }}</td>
+            <td class="action text-right">
               <span class="btn btn-default action-button"
                     ng-click="removeItem()">
-                <i class="glyphicon glyphicon-ban-circle"></i>
+                <span class="glyphicon glyphicon-ban-circle"></span>
               </span>
             </td>
           </tr>
@@ -35,16 +35,17 @@
 
     <fieldset>
       <legend>Add a group</legend>
+
       <div class="input-group">
-        <input type="text"
-               class="form-control"
+        <input class="form-control"
+               type="text"
                ng-model="newItem"
                name="newItem"
                required />
-        <span ng-click="addItem()"
-              class="btn btn-primary input-group-addon"
+        <span class="btn btn-primary input-group-addon"
+              ng-click="addItem()"
               ng-disabled="invalid()">
-          <i class="glyphicon glyphicon-plus"></i>
+          <span class="glyphicon glyphicon-plus"></span>
         </span>
       </div>
     </fieldset>
@@ -54,7 +55,7 @@
 <div class="modal-footer">
   <button ng-repeat="btn in buttons"
           ng-click="close(btn.result)"
-          class="btn"
+          class="btn btn-default"
           ng-class="btn.cssClass">
     {{ btn.label }}
   </button>
