--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/job-retry-bulk-action.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/job-retry-bulk-action.html
@@ -4,6 +4,6 @@
    ng-click="openDialog()"
    tooltip="Increment Number of Retries of Failed Jobs"
    tooltip-placement="left">
-  <i class="glyphicon glyphicon-repeat"></i>
+  <span class="glyphicon glyphicon-repeat"></span>
 </a>
 <!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/job-retry-bulk-action.html -->
