--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/variable-instance-inspect-dialog.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/variable-instance-inspect-dialog.html
@@ -3,7 +3,7 @@
   <h3>Inspect Object Variable</h3>
 </div>
 
-<div class="modal-body">
+<div class="variable-instance-inspect modal-body">
   <div notifications-panel></div>
 
   <form name="serializableVariable"
@@ -43,18 +43,20 @@
                   class="input-xxlarge">
         </textarea>
       </div>
+
       <div ng-if="selectedTab === 'deserialized'">
         <div class="alert alert-danger"
              ng-show="deserializationError">
           <strong>Deserialization Error</strong>:
           {{deserializationError}}
         </div>
+
         <div ng-show="!deserializationError">
           <textarea name="currentValueDeserialized"
                     ng-model="currentValueDeserialized"
                     ng-keyup="typeIn(this, 'deserialized')"
                     rows="10"
-                    class="input-xxlarge">
+                    class="input-xxlarge form-control">
           </textarea>
         </div>
       </div>
@@ -63,7 +65,7 @@
 
   <div class="alert alert-block"
        ng-show="status === 'confirmChange'">
-    <i class="glyphicon glyphicon-warning-sign"></i>
+    <span class="glyphicon glyphicon-warning-sign"></span>
     <strong>Warning:</strong>
     Are you sure you want to change the value of this Object? Changing the variable in an incompatible way may lead to severe runtime problems.
   </div>
@@ -78,20 +80,31 @@
 </div>
 
 <div class="modal-footer">
-  <button class="btn"
+  <button class="btn btn-default"
           ng-click="$dismiss()"
-          ng-hide="status === 'changeSuccess'">Close</button>
+          ng-hide="status === 'changeSuccess'">
+    Close
+  </button>
+
   <![if gt IE 9]>
     <button class="btn btn-primary"
             ng-click="$close()"
-            ng-show="status === 'changeSuccess'">OK</button>
+            ng-show="status === 'changeSuccess'">
+      OK
+    </button>
+
     <button class="btn btn-primary"
             ng-click="change()"
             ng-disabled="status !== 'beforeChange' || !hasChanged()"
-            ng-hide="status != 'beforeChange'">Change</button>
+            ng-hide="status != 'beforeChange'">
+      Change
+    </button>
+
     <button class="btn btn-warning"
             ng-click="change()"
-            ng-hide="status != 'confirmChange'">Confirm Change</button>
+            ng-hide="status != 'confirmChange'">
+      Confirm Change
+    </button>
   <![endif]>
 </div>
 <!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/variable-instance-inspect-dialog.html -->
