--- a/client/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-state-dialog.html
+++ b/client/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-state-dialog.html
@@ -1,10 +1,9 @@
 <!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-state-dialog.html -->
 <div class="modal-header">
-  <h3 ng-show="jobDefinition.suspended">Activate Job Definition</h3>
-  <h3 ng-hide="jobDefinition.suspended">Suspend Job Definition</h3>
+  <h3>{{ (jobDefinition.suspended ? 'Activate' : 'Suspend') }} Job Definition</h3>
 </div>
 
-<div class="modal-body">
+<div class="job-definition-suspension-state modal-body">
   <div notifications-panel></div>
 
   <div ng-hide="status === 'SUCCESS' || status === 'FAIL'">
@@ -19,61 +18,100 @@
       This job definition will be suspended, so that new jobs based on this job definition are initially suspended.
     </p>
 
-    <form class="form-horizontal" name="updateSuspensionStateForm" novalidate request-aware ng-submit="updateSuspensionState()">
+    <form class="form-horizontal"
+          name="updateSuspensionStateForm"
+          novalidate
+          request-aware
+          ng-submit="updateSuspensionState()">
+
       <fieldset>
         <div class="form-group">
-          <label class="control-label" for="includeJobsValue">Include Existing Jobs
+          <label class="col-xs-4 control-label"
+                 for="includeJobsValue">
+            Include Existing Jobs
             <!-- activation -->
-            <span class="btn btn-sm btn-link btn-control btn-control-link"
+            <span class="glyphicon glyphicon-question-sign"
                   tooltip="Including jobs means that all existing jobs of this job definition will be activated too, if the value is set to true."
                   tooltip-placement="right"
                   ng-show="jobDefinition.suspended">
-              <i class="glyphicon glyphicon-question-sign"></i>
             </span>
 
             <!-- suspension -->
-            <span class="btn btn-sm btn-link btn-control btn-control-link"
+            <span class="glyphicon glyphicon-question-sign"
                   tooltip="Including jobs means that all existing jobs of this job definition will be suspended too, if the value is set to true."
                   tooltip-placement="right"
                   ng-hide="jobDefinition.suspended">
-              <i class="glyphicon glyphicon-question-sign"></i>
             </span>
           </label>
-          <div class="controls">
-            <input id="includeJobsValueId" name="includeJobsValue" type="checkbox" ng-model="data.includeJobs">
+
+
+          <div class="col-xs-8 checkbox">
+            <label>
+              <input id="includeJobsValueId"
+                     name="includeJobsValue"
+                     type="checkbox"
+                     ng-model="data.includeJobs" />
+            </label>
           </div>
         </div>
 
         <div class="form-group">
-          <label class="control-label" for="executeImmediately">Execute
-            <span class="btn btn-sm btn-link btn-control btn-control-link"
+          <label class="col-xs-4 control-label"
+                 for="executeImmediately">
+            Execute
+            <span class="glyphicon glyphicon-question-sign"
                   tooltip="Decide whether the activation of this job definition should be executed immediately or delayed. If the activation should happen delayed then an execution date must be provided on which the activation will be scheduled."
                   tooltip-placement="right"
                   ng-show="jobDefinition.suspended">
-              <i class="glyphicon glyphicon-question-sign"></i>
             </span>
-            <span class="btn btn-sm btn-link btn-control btn-control-link"
+
+            <span class="glyphicon glyphicon-question-sign"
                   tooltip="Decide whether the suspension of this job definition should be executed immediately or delayed. If the suspension should happen delayed then an execution date must be provided on which the suspension will be scheduled."
                   tooltip-placement="right"
                   ng-hide="jobDefinition.suspended">
-              <i class="glyphicon glyphicon-question-sign"></i>
             </span>
           </label>
-          <div class="controls">
-            <label class="radio">
-              <input ng-model="data.executeImmediately" ng-value="true" type="radio" name="execute">
-              Immediately
-            </label>
-            <label class="radio">
-              <input ng-model="data.executeImmediately" ng-value="false" type="radio" name="execute">
-              Delayed
-            </label>
-          </div>
-          <label class="control-label" for="executionDateValue" ng-show="!data.executeImmediately">Schedule at</label>
-          <div class="controls" ng-show="!data.executeImmediately">
-            <input date name="executionDateValue" ng-model="data.executionDate" type="text" required>
 
-            <p class="invalid" ng-show="this.updateSuspensionStateForm.executionDateValue.$error.date">
+          <div class="col-xs-8">
+            <div class="radio">
+              <label>
+                <input ng-model="data.executeImmediately"
+                       ng-value="true"
+                       type="radio"
+                       name="execute" />
+                Immediately
+              </label>
+            </div>
+
+            <div class="radio">
+              <label>
+                <input ng-model="data.executeImmediately"
+                       ng-value="false"
+                       type="radio"
+                       name="execute" />
+                Delayed
+              </label>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group"
+             ng-show="!data.executeImmediately">
+          <label class="col-xs-4 control-label"
+                 for="executionDateValue">
+            Schedule at
+          </label>
+
+          <div class="col-xs-8">
+            <input name="executionDateValue"
+                   ng-model="data.executionDate"
+                   class="form-control"
+                   type="text"
+                   date
+                   required />
+
+            <p class="invalid"
+               ng-show="this.updateSuspensionStateForm.executionDateValue.$error.date">
               Supported pattern 'yyyy-MM-ddTHH:mm:ss'.
             </p>
           </div>
@@ -82,14 +120,8 @@
       </fieldset>
     </form>
 
-    <p ng-show="jobDefinition.suspended">
-      <!-- activation -->
-      Do you really want to activate this job definition?
-    </p>
-
-    <p ng-hide="jobDefinition.suspended">
-      <!-- suspension -->
-      Do you really want to suspend this job definition?
+    <p>
+      Do you really want to {{ (jobDefinition.suspended ? 'activate' : 'suspend') }} this job definition?
     </p>
 
   </div>
@@ -123,22 +155,28 @@
       The suspension of the Job Definition could not be scheduled to {{ data.executionDate }} successfully.
     </p>
   </div>
-
 </div>
-<div class="modal-footer">
-  <button class="btn" ng-click="close(status)"
-          ng-disabled="status === 'PERFORM_UDPATE'"
-          ng-hide="status === 'SUCCESS' || status === 'FAIL'">Close</button>
 
-  <button type="submit" class="btn btn-primary" ng-click="updateSuspensionState()"
-          ng-hide="status === 'SUCCESS' || status === 'FAIL'"
-          ng-disabled="!isValid() || status === 'PERFORM_UDPATE'">
-    <span ng-hide="jobDefinition.suspended">Suspend</span>
-    <span ng-show="jobDefinition.suspended">Activate</span>
-    <span></span>
+<div class="modal-footer">
+  <button class="btn btn-link"
+          ng-click="close(status)"
+          ng-disabled="status === 'PERFORM_UDPATE'"
+          ng-hide="status === 'SUCCESS' || status === 'FAIL'">
+    Close
   </button>
 
-  <button class="btn btn-primary" ng-click="close(status)"
-          ng-show="status === 'SUCCESS' || status === 'FAIL'">OK</button>
+  <button type="submit"
+          class="btn btn-primary"
+          ng-click="updateSuspensionState()"
+          ng-hide="status === 'SUCCESS' || status === 'FAIL'"
+          ng-disabled="!isValid() || status === 'PERFORM_UDPATE'">
+    {{ (jobDefinition.suspended ? 'Activate' : 'Suspend') }}
+  </button>
+
+  <button class="btn btn-primary"
+          ng-click="close(status)"
+          ng-show="status === 'SUCCESS' || status === 'FAIL'">
+    OK
+  </button>
 </div>
 <!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-state-dialog.html -->
